[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "msbart-predict"
version = "0.1.0"
description = "Portable MS-BART inference: MS2 spectrum -> ranked candidate molecular structures (with vendored MIST)."
requires-python = ">=3.9,<3.12"

# NOTE: install the torch build that matches the target machine FIRST
#   Linux + CUDA 12.x : pip install torch --index-url https://download.pytorch.org/whl/cu124
#   Linux/macOS CPU   : pip install torch --index-url https://download.pytorch.org/whl/cpu
# Any torch>=2.2 already present satisfies the constraint below, so pip won't
# overwrite your platform-specific build.
dependencies = [
    "torch>=2.2",
    "transformers>=4.51",
    "pytorch-lightning>=2.2",
    "torchmetrics>=1.0",
    "selfies>=2.1,<3",
    "rdkit>=2023.9",
    "numpy>=1.24,<2",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "h5py>=3.8",
    "pathos>=0.3",
    "multiprocess>=0.70",
    "tqdm>=4.64",
    "pyyaml>=6.0",
]

[project.scripts]
msbart-predict = "predict_cli:main"

# Editable install (`pip install -e .`) is the intended mode: it keeps the
# source tree in place so the vendored MIST source (vendor/) and the model
# weights (weights/) resolve relative to this folder.
[tool.setuptools]
py-modules = ["predict_cli"]

[tool.setuptools.packages.find]
include = ["msbart_predict*"]
